--- a/cssGrid.css
+++ b/cssGrid.css
@@ -1,100 +1,115 @@
 
-
-
-
 body {
-    width: 100%;
-    height: 100%;
+    width: 1020px;
+    height: 1440px;
+    
+
 }
+
+
 .grid-container {
-    display:grid;
-    display:table-column-group; 
-    /* width: 90%;
-    height: 90%; */
-    grid-template-columns: repeat(16, 64);
-    grid-template-rows: repeat(4, 360);
-    grid-column-gap: 40px;
-    grid-row-gap:  30px;
-    justify-items: start;
-    align-items: start;
-    align-content: start;
-    width: 100%;
-    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(16, 65px);
+    grid-template-rows: repeat(16, 88.75px); 
+    
+    width: 1020px;
+    height: 1440px;
+    
 } 
-/* .class  {
-    display:table-column-group; 
+.grid-item {
+    display: grid;
+    grid-template-columns: subgrid;
+    margin: 0;
 }
- */
-section {
-    display:block;
-    width: 420px;
-    height: 200px ;
+
+p {
     font-family: Arial, Helvetica, sans-serif; 
     border: black solid 1px;
-}
-.grid-item {
+    align-content:center;
+    text-align: center;
     width: 420px;
-    height: 200px ;
-    grid-column: 1 / 8;
-    grid-row: 1 / 2;
+    height: 200px;
+
+}
+.box1 {
+    width: 420px;
+    height: 200px;
+    grid-column-start: 1;
+    grid-column-end: 8;
+    grid-row-start: 1;
+    grid-row-end: 4;
 }
 
-.grid-img1 {
-  
-    grid-column: 9 / 16;
-    grid-row: 1 / 2; 
+
+.box2 {
     
+    grid-column-start: 9;
+    grid-column-end: 16;
+    grid-row-start: 1;
+    grid-row-end: 4,
+
 }
-.grid-img2 { 
+.box3 { 
     
-    grid-column: 1 / 3;
-    grid-row: 2 / 3; 
-    
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 5;
+    grid-row-end: 8;
+
 }
-.grid-img3 {
-  
-    grid-column: 4 / 6;
-    grid-row: 2 / 3; 
+.box4 {
     
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 5;
+    grid-row-end: 8;    
 }
-.grid-img4 {
-  
-    grid-column: 7 / 13;
-    grid-row: 2 / 4; 
+.box5 {
+    
+    grid-column-start: 7;
+    grid-column-end: 13;
+    grid-row-start: 5;
+    grid-row-end: 12;
 }    
-.grid-img5 {
-   
-    grid-column: 14 / 16;
-    grid-row: 2 / 3; 
+.box6 {
     
+    grid-column-start: 14;
+    grid-column-end: 16;
+    grid-row-start: 5;
+    grid-row-end: 8;
 }
-.grid-img6 {
-   
-    grid-column: 1 / 6;
-    grid-row: 3 / 4; 
+.box7 {
     
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 9;
+    grid-row-end: 12;
 }
-.grid-img7 {
-  
-    grid-column: 14 / 16;
-    /* grid-row: 3 / 4; */ 
-   
-}
-.grid-img8 {
-  
-    grid-column: 1 / 3;
-    grid-row: 4 / 5; 
-   
-}
-.grid-img9 {
-  
-    grid-column: 4 / 6;
-    grid-row: 4 / 5; 
+.box8 {
     
+    grid-column-start: 14;
+    grid-column-end: 16;
+    grid-row-start: 9;
+    grid-row-end: 12;
 }
-.grid-img10 {
-   
-    grid-column: 7 / 16;
-    grid-row: 4 / 5; 
-   
+.box9 {
+    
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 13;
+    grid-row-end: 16;
+}
+.box10 {
+    
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 13;
+    grid-row-end: 16;
+}
+.box11 {
+    
+    grid-column-start: 7;
+    grid-column-end: 16;
+    grid-row-start: 13;
+    grid-row-end: 16;
 }
