--- a/cssGrid.css
+++ b/cssGrid.css
@@ -1,115 +1,78 @@
 
+ 
 body {
-    width: 1020px;
-    height: 1440px;
-    
-
+    width: 60%;
+    height: 60%;
 }
+
 
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(16, 65px);
-    grid-template-rows: repeat(16, 88.75px); 
-    
-    width: 1020px;
-    height: 1440px;
-    
-} 
-.grid-item {
-    display: grid;
-    grid-template-columns: subgrid;
-    margin: 0;
-}
+    gap: 8px 5px;  
+    grid-template-columns: repeat(10, auto);
+    grid-template-rows: repeat(4, auto);
+  }
 
-p {
-    font-family: Arial, Helvetica, sans-serif; 
+.text {
     border: black solid 1px;
+    display: inline;
+    grid-column: auto / span 5;
+    grid-row: 100%;
     align-content:center;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: 12px;
     text-align: center;
-    width: 420px;
-    height: 200px;
-
-}
-.box1 {
-    width: 420px;
-    height: 200px;
-    grid-column-start: 1;
-    grid-column-end: 8;
-    grid-row-start: 1;
-    grid-row-end: 4;
 }
 
-
-.box2 {
-    
-    grid-column-start: 9;
-    grid-column-end: 16;
-    grid-row-start: 1;
-    grid-row-end: 4,
-
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.box3 { 
-    
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 5;
-    grid-row-end: 8;
 
+.item2 {
+    grid-column: auto / span 5;
+    grid-row: 100%
 }
-.box4 {
-    
-    grid-column-start: 4;
-    grid-column-end: 6;
-    grid-row-start: 5;
-    grid-row-end: 8;    
+
+.item3 { 
+    grid-column: auto / span 2;
+    grid-row: 100%;
 }
-.box5 {
-    
-    grid-column-start: 7;
-    grid-column-end: 13;
-    grid-row-start: 5;
-    grid-row-end: 12;
+
+.item4 {
+    grid-column: auto / span 2;
+    grid-row: 100%;
+}
+
+.item5 {
+    grid-column: auto / span 4;
+    grid-row: auto / span 2;
 }    
-.box6 {
-    
-    grid-column-start: 14;
-    grid-column-end: 16;
-    grid-row-start: 5;
-    grid-row-end: 8;
+.item6 {
+    grid-column: auto / span 2;
+    grid-row: 100%;
 }
-.box7 {
-    
-    grid-column-start: 1;
-    grid-column-end: 6;
-    grid-row-start: 9;
-    grid-row-end: 12;
+.item7 {
+    grid-column: auto / span 4;
+    grid-row: 100%;
 }
-.box8 {
-    
-    grid-column-start: 14;
-    grid-column-end: 16;
-    grid-row-start: 9;
-    grid-row-end: 12;
+.item8 {
+    grid-column: auto / span 2;
+    grid-row: 100%;
 }
-.box9 {
-    
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 13;
-    grid-row-end: 16;
+.item9 {
+    grid-column: auto / span 2;
+    grid-row: 100%;
 }
-.box10 {
-    
-    grid-column-start: 4;
-    grid-column-end: 6;
-    grid-row-start: 13;
-    grid-row-end: 16;
+.item10 {
+    grid-column: auto / span 2;
+    grid-row: 100%;
 }
-.box11 {
-    
-    grid-column-start: 7;
-    grid-column-end: 16;
-    grid-row-start: 13;
-    grid-row-end: 16;
+.item11 {
+    grid-column: auto / span 6;
+    grid-row: 100%;
 }
