--- a/cssGrid.css
+++ b/cssGrid.css
@@ -1,18 +1,20 @@
 
- 
+
 body {
+    width: 50%;
+    height: 50%;
+}
+.main-container {
+    align-self: flex-start;
     width: 60%;
     height: 60%;
 }
-
-
-
 .grid-container {
     display: grid;
     gap: 8px 5px;  
     grid-template-columns: repeat(10, auto);
     grid-template-rows: repeat(4, auto);
-  }
+}
 
 .text {
     border: black solid 1px;
@@ -21,9 +23,10 @@ body {
     grid-row: 100%;
     align-content:center;
 }
+
 p{
     font-family: Arial, Helvetica, sans-serif; 
-    font-size: 12px;
+    font-size: 28px;
     text-align: center;
 }
 
@@ -38,40 +41,24 @@ img {
     grid-row: 100%
 }
 
-.item3 { 
-    grid-column: auto / span 2;
-    grid-row: 100%;
-}
-
-.item4 {
-    grid-column: auto / span 2;
-    grid-row: 100%;
-}
-
 .item5 {
     grid-column: auto / span 4;
     grid-row: auto / span 2;
 }    
-.item6 {
-    grid-column: auto / span 2;
-    grid-row: 100%;
-}
+
 .item7 {
     grid-column: auto / span 4;
     grid-row: 100%;
 }
-.item8 {
+
+
+.item3, .item4,
+.item6, .item8,
+.item9, .item10  {
     grid-column: auto / span 2;
     grid-row: 100%;
 }
-.item9 {
-    grid-column: auto / span 2;
-    grid-row: 100%;
-}
-.item10 {
-    grid-column: auto / span 2;
-    grid-row: 100%;
-}
+
 .item11 {
     grid-column: auto / span 6;
     grid-row: 100%;
